--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "form-urlencoded": "^4.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
